<resources>
    <string name="app_name">OmaRuokis</string>
    <string name="action_settings">Asetukset</string>
    <string name="user_info_header">Omat tiedot</string>
    <string name="user_info_dob">Syntymäaika:</string>
    <string name="user_info_sex">Sukupuoli:</string>
    <string name="user_info_weight">Paino:</string>
    <string name="user_info_height">Pituus:</string>
    <string name="user_info_activity_level">Fyysinen aktiivisuus (oletus):</string>
    <string name="button_save">Tallenna</string>
    <string name="user_info_male">Mies</string>
    <string name="user_info_female">Nainen</string>
    <string name="empty_hint"> </string>
    <string name="user_info_hint_height">175</string>
    <string name="user_info_hint_weight">65</string>
    <string name="user_info_hint_dob">31.1.1995</string>
    <string name="user_info_error">Tarkista tiedot!</string>
    <string name="main_date_error">Valitsemasi päivä oli ennen syntymääsi!</string>
    <string name="main_weight_error">Tarkista paino!</string>
    <string name="user_info_saved">Tiedot tallennettu.</string>
    <string name="unit_weight">kg</string>
    <string name="unit_height">cm</string>
    <string name="main_activity_level">Fyysinen aktiivisuus:</string>
    <string name="main_info_bmi">Painoindeksi:</string>
    <string name="main_info_energy_consump">Energiankulutus (arv.):</string>
    <string name="unit_energy">kJ</string>
    <string name="main_meals_header">Syödyt ruoat</string>
    <string name="main_meals_show">Näytä</string>
    <string name="main_meals_hide">Piilota</string>
    <string name="hint_word">Hakusana</string>
    <string name="title_activity_food_details">Ravintosisältö per 100 g</string>
    <string name="search">Haku</string>
    <string name="foodname">Hakusana</string>
    <string name="find">Hae</string>
    <string name="favorites">Suosikit:</string>
    <string name="action_info">Tietoja sovelluksesta</string>
    <string name="main_calendar_button_description">Calendar icon</string>
    <string name="main_revert_button_description">Revert icon</string>
    <string name="title_activity_food_search">Ruoan haku</string>
    <string name="results">Haku tulokset:</string>
    <string name="main_nutrients_header">Päivän saanti</string>
    <string name="main_nutrients_calories">Energia:</string>
    <string name="main_nutrients_carbs">Hiilihydraatti:</string>
    <string name="main_nutrients_lipids">Rasva:</string>
    <string name="main_nutrients_proteins">Proteiini:</string>
    <string name="unit_grams">g</string>
    <string name="amount_zero">0</string>
    <string name="buttonEat">Syö</string>
    <string name="snackbar_eat_message">Söit:</string>
    <string name="food_quantity_update">Muutettu</string>
</resources>
