<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.omaruokis.food_details.FoodSearchActivity"
    tools:showIn="@layout/activity_food_search"
    >


    <EditText
        android:id="@+id/editTextFind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryLight"
        android:ems="10"
        android:hint="@string/foodname"
        android:imeOptions="actionSearch"
        android:inputType="textShortMessage"
        android:padding="12dp"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintEnd_toStartOf="@+id/buttonFind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFind"
        tools:layout_editor_absoluteX="8dp"
        tools:listitem="@layout/recyclerview_item" />

    <Button
        android:id="@+id/buttonFind"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="buttonFind"
        android:text="@string/find"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/favorites"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFind" />

</android.support.constraint.ConstraintLayout>